--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>thymeleaf示例</title>
+    <script th:src="@{jquery/jquery-3.3.1.js}" src="../static/jquery/jquery-3.3.1.js"></script>
+    <!--<script th:src="@{https://cdn.bootcss.com/jquery/3.3.1/jquery.js}"></script>-->
+    <link th:href="@{bootstrap-3.3.7-dist/css/bootstrap.css}" rel="stylesheet"
+          href="../static/bootstrap-3.3.7-dist/css/bootstrap.css">
+    <!--<link th:href="@{https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css}" rel="stylesheet">-->
+    <script th:src="@{bootstrap-3.3.7-dist/js/bootstrap.js}"
+            src="../static/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <!--<script th:src="@{https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js}"></script>-->
+    <script type="text/css">
+        .container {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        @media (min-width: 768px) {
+            .container {
+                width: 750px;
+            }
+        }
+
+        @media (min-width: 992px) {
+            .container {
+                width: 970px;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .container {
+                width: 1170px;
+            }
+        }
+
+        .container-fluid {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+    </script>
 </head>
 <body>
-<h1>thymeleaf示例</h1>
+<div class="container">
+    <div class="h1">thymeleaf示例</div>
+    <nav class="navbar navbar-inverse">
+       <!-- <div class="navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Page One</a></li>
+                <li><a href="#">Page Two</a></li>
+            </ul>
+        </div>-->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu"
+                    aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+    </nav>
+
+</div>
 </body>
+</html>
+
 </html>
